<resources>
    <string name="app_name">Giraffe</string>
    <string name="ad_n_z_ve_soyad_n_z_nedir">Adınız ve Soyadınız </string>
    <string name="e_posta_adresiniz_nedir">E-Posta Adresiniz </string>
    <string name="giraffe">GIRAFFE</string>
    <string name="kullan_c_ad">Kullanıcı Adı</string>
    <string name="kullan_c_kaydet">Kullanıcı Kaydet</string>
    <string name="parola">Parola</string>
    <string name="zaten_bir_hesab_n_z_m_var">Zaten bir hesabınız mı var ?</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <integer name="google_play_services_version">11220000</integer>
    <string name="google_maps_key">AIzaSyC8LyiOQyxFkW9zuN8ipfaI2DrclPLMTb4</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
</resources>
