<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/sign_up_layout"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="#ffffff"
    tools:context="com.example.sinem.giraffe.SignUpRegisterActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/giraffe"
        android:textSize="32sp"
        android:layout_marginTop="24dp"
        android:layout_margin="8dp"
        android:textAlignment="center"
        android:textColor="@color/secondaryTextColor"
        android:id="@+id/app_title"/>
    <ImageView
        android:layout_width="108dp"
        android:layout_height="108dp"
        android:layout_gravity="center"
        android:id="@+id/app_icon"
        android:layout_margin="8dp"
        android:src="@mipmap/ic_giraffe_icon"/>


        <EditText
            android:id="@+id/adSoyad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ad_n_z_ve_soyad_n_z_nedir"
            android:layout_margin="6dp"
            android:inputType="text"
            android:textSize="16sp"
            android:maxLines="1" />

        <EditText
            android:id="@+id/email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_posta_adresiniz_nedir"
            android:layout_margin="6dp"
            android:inputType="textEmailAddress"
            android:textSize="16sp"
            android:maxLines="1"
          />


        <EditText
            android:id="@+id/txt_userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/kullan_c_ad"
            android:layout_margin="6dp"
            android:inputType="text"
            android:textSize="16sp"
            android:maxLines="1" />


        <EditText
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/parola"
            android:imeActionId="@+id/login"
            android:imeOptions="actionUnspecified"
            android:layout_margin="6dp"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:maxLines="1" />

    <Button
        android:id="@+id/btn_save_user"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginTop="16dp"
        android:text="@string/kullan_c_kaydet"
        android:textSize="16sp"
        android:textStyle="bold"
        android:background="@color/colorPrimary"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="18dp"
        android:textAlignment="center"
        android:text="@string/zaten_bir_hesab_n_z_m_var"
        android:textColor="#ff8f00"
        android:textSize="12sp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginTop="24dp"
        android:id="@+id/btn_go_login"
        android:background="#ffffff"
        />


</LinearLayout>
